tests/cli/snapshots/cli__init__init_creates_the_well_known_file_named_after_its_directory.snap
---
source: tests/cli/init.rs
info:
  program: slcr
  args:
    - init
---
success: true
exit_code: 0
----- stdout -----
SPEC.slcr.yml: created specification todo-api

----- stderr -----
