tests/cli/snapshots/cli__init__init_rejects_an_invalid_title.snap
---
source: tests/cli/init.rs
info:
  program: slcr
  args:
    - init
    - "--title"
    - " padded"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value ' padded' for '--title <TITLE>': " padded" is not a valid title

For more information, try '--help'.
