tests/cli/snapshots/cli__init__init_takes_a_name_and_a_title.snap
---
source: tests/cli/init.rs
info:
  program: slcr
  args:
    - init
    - specs.yaml
    - "--name"
    - billing
    - "--title"
    - Billing Service
---
success: true
exit_code: 0
----- stdout -----
specs.yaml: created specification billing

----- stderr -----
