tests/cli/snapshots/cli__init__init_takes_only_one_file.snap
---
source: tests/cli/init.rs
info:
  program: slcr
  args:
    - init
    - a.yaml
    - b.yaml
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: unexpected argument 'b.yaml' found

Usage: slcr init [OPTIONS] [FILE]

For more information, try '--help'.
